# gnn-xai-core

./: README.md  pyproject.toml
gnn_xai_common/criteria/: __init__.py
gnn_xai_common/datasets/: __init__.py
gnn_xai_common/models/nn/: functional.py
gnn_xai_common/utils/: __init__.py
