[tool.poetry]
name = "gnn-xai-common"
version = "1.0.4"
description = ""
authors = ["Xiaoqi Wang <xiaoqiwang2582@gmail.com>"]
readme = "README.md"
packages = [{include = "gnn_xai_common"}]

[tool.poetry.dependencies]
python = "^3.10"
torch-geometric = "~2.5"
torch = "~2.1"
torchmetrics = "^1.3.2"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
seaborn = "^0.13.2"
tqdm = "^4.66.2"


[[tool.poetry.source]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-2.1.0+cpu.html"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
